--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,5 @@ $positive  : #43B02A;
 $negative  : #EE2737;
 $info      : #009B77;
 $warning   : #FAD714;
+$body-font-size   : 14px !default;
+$body-line-height : 1.25 !default;
